[project]
name = "lightning-vocoders"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = [ "soundfile", "transformers", "torchaudio", "lightning", "hydra-core", "pyrootutils", "webdataset", "tensorboard", "wandb", "torch", "pandarallel", "speechbrain", "descript-audio-codec", "xvector-jtubespeech"]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel", "black", "nnmnkwii", "pysptk", "librosa", "pyworld", "ipywidgets", "seaborn", "umap-learn"]
[tool.hatch.metadata]
allow-direct-references = true
